Fix browser autofill and stack form fields on smaller screens

--- a/src/components/InterestForm.css
+++ b/src/components/InterestForm.css
@@ -137,3 +137,21 @@ input[type=number]::-webkit-outer-spin-button {
   border-color: var(--spidr-blue);
   background-color: rgb(25,25,25,0.6);
 }
+
+/* Stack form fields on smaller screens*/
+@media (max-width: 640px) {
+  .form-row {
+    flex-direction: column;
+  }
+}
+/* Fix for Browser Autofill*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active {
+    -webkit-text-fill-color: var(--spidr-white) !important;
+    background-image: none !important;
+    box-shadow: 0 0 0 1000px var(--spidr-black) inset !important;
+    border-radius: 8px !important;
+    transition: background-color 5000s ease-in-out 0s;
+}
